// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`.not.toContainValues > fails when given object contains all values including arrays 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toContainValues([22m[32mexpected[39m[2m)[22m

Expected object to not contain all values:
  [32mArray [
  \\"duck\\",
  Array [
    Object {
      \\"bar\\": false,
      \\"foo\\": 0,
      \\"hello\\": \\"world\\",
    },
  ],
][39m
Received:
  [31mObject {
  \\"donald\\": \\"duck\\",
  \\"message\\": Array [
    Object {
      \\"bar\\": false,
      \\"foo\\": 0,
      \\"hello\\": \\"world\\",
    },
  ],
}[39m"
`;

exports[`.not.toContainValues > fails when given object contains all values including objects 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toContainValues([22m[32mexpected[39m[2m)[22m

Expected object to not contain all values:
  [32mArray [
  Object {
    \\"bar\\": false,
    \\"foo\\": 0,
    \\"hello\\": \\"world\\",
  },
  \\"duck\\",
][39m
Received:
  [31mObject {
  \\"donald\\": \\"duck\\",
  \\"message\\": Object {
    \\"bar\\": false,
    \\"foo\\": 0,
    \\"hello\\": \\"world\\",
  },
}[39m"
`;

exports[`.not.toContainValues > fails when given object contains primitive values 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toContainValues([22m[32mexpected[39m[2m)[22m

Expected object to not contain all values:
  [32mArray [
  \\"world\\",
  false,
][39m
Received:
  [31mObject {
  \\"bar\\": false,
  \\"foo\\": 0,
  \\"hello\\": \\"world\\",
}[39m"
`;

exports[`.toContainValues > fails when given object does not contain all primitive values 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toContainValues([22m[32mexpected[39m[2m)[22m

Expected object to contain all values:
  [32mArray [
  \\"hello\\",
  0,
  false,
][39m
Received:
  [31mObject {
  \\"bar\\": false,
  \\"foo\\": 0,
  \\"hello\\": \\"world\\",
}[39m"
`;

exports[`.toContainValues > fails when given object does not contain all values including arrays 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toContainValues([22m[32mexpected[39m[2m)[22m

Expected object to contain all values:
  [32mArray [
  \\"duck\\",
  Array [
    Object {
      \\"hello\\": \\"world\\",
    },
  ],
][39m
Received:
  [31mObject {
  \\"donald\\": \\"duck\\",
  \\"message\\": Array [
    Object {
      \\"bar\\": false,
      \\"foo\\": 0,
      \\"hello\\": \\"world\\",
    },
  ],
}[39m"
`;

exports[`.toContainValues > fails when given object does not contain all values including objects 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toContainValues([22m[32mexpected[39m[2m)[22m

Expected object to contain all values:
  [32mArray [
  Object {
    \\"hello\\": \\"world\\",
  },
][39m
Received:
  [31mObject {
  \\"donald\\": \\"duck\\",
  \\"message\\": Object {
    \\"bar\\": false,
    \\"foo\\": 0,
    \\"hello\\": \\"world\\",
  },
}[39m"
`;
